# Compiler

./: CMakeLists.txt  README.md
src/: AST.hpp  Analyzer.cpp  Analyzer.hpp  CMakeLists.txt  Compiler.cpp  Compiler.hpp  ErrorHandler.cpp  ErrorHandler.hpp  IRGenerator.cpp  IRGenerator.hpp  Parser.cpp  Parser.hpp  SymbolTable.hpp  SymbolTableHandler.cpp  SymbolTableHandler.hpp  Token.hpp  Tokenizer.cpp  Tokenizer.hpp  main.cpp
src/StandardLibrary/: CMakeLists.txt  console_io.h  syscall.h  util.c  util.h
src/StandardLibrary/linux/: CMakeLists.txt  console_io.c  startup.s  syscall.s
tests/: AnalyzerTest.cpp  CMakeLists.txt  CompilerTest.cpp  IRGeneratorTest.cpp  TokenizerTest.cpp
